--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   line-height: 100px;
   font-size: 60px;
   padding: 0;
+  background-color: white;
 }
 
 button {
@@ -27,15 +28,9 @@ button {
   font-size: 20px;
 }
 
-.container {
-  background-color: white;
+.grid {
   display: grid;
   grid-template-columns: repeat(3, auto);
   width: 306px;
   margin: 50px auto;
-}
-
-.disabledbutton {
-    pointer-events: none;
-    opacity: 0.4;
 }
